replace eth to cfx

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "private": true,
-  "name": "web3-react",
-  "description": "A simple, maximally extensible, dependency minimized framework for building modern Ethereum dApps",
+  "name": "web3-conflux-react",
+  "description": "A simple, maximally extensible, dependency minimized framework for building modern Conflux dApps",
   "keywords": [
     "react",
     "react-hooks",
     "hooks",
-    "ethereum",
+    "conflux",
     "javascript",
     "typescript",
     "web3",
@@ -27,7 +27,7 @@
   "author": "Noah Zinsmeister <noahwz@gmail.com>",
   "repository": {
     "type": "git",
-    "url": "git://github.com/NoahZinsmeister/web3-react.git"
+    "url": "git://github.com/raisezhang/web3-conflux-react.git"
   },
   "scripts": {
     "bootstrap": "lerna bootstrap",
