--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,5 @@
 {
-  "version": "6.1.6",
+  "version": "6.1.7",
   "npmClient": "yarn",
   "command": {
     "publish": {
@@ -9,6 +9,6 @@
     }
   },
   "packages": [
-    "packages/*"
+    "packages/injected-connector"
   ]
 }
