--- a/packages/injected-connector/package.json
+++ b/packages/injected-connector/package.json
@@ -1,27 +1,27 @@
 {
-  "name": "@web3-react/injected-connector",
+  "name": "@web3-conflux-react/injected-connector",
   "publishConfig": {
     "access": "public"
   },
-  "version": "6.0.7",
-  "description": "A simple, maximally extensible, dependency minimized framework for building modern Ethereum dApps",
+  "version": "6.0.8",
+  "description": "A simple, maximally extensible, dependency minimized framework for building modern Conflux dApps",
   "keywords": [
     "react",
     "react-hooks",
     "hooks",
-    "ethereum",
+    "conflux",
     "javascript",
     "typescript",
     "web3",
     "context",
     "frontend",
     "dapp",
-    "metamask"
+    "conflux-portal"
   ],
-  "author": "Noah Zinsmeister <noahwz@gmail.com>",
+  "author": "raisezhang <raisezhang@hotmail.com>",
   "repository": {
     "type": "git",
-    "url": "git://github.com/NoahZinsmeister/web3-react.git"
+    "url": "git://github.com/raisezhang/web3-conflux-react.git"
   },
   "main": "dist/index.js",
   "module": "dist/injected-connector.esm.js",
