--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -3,7 +3,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "version": "6.2.1",
+  "version": "6.2.0",
   "description": "A simple, maximally extensible, dependency minimized framework for building modern Ethereum dApps",
   "keywords": [
     "react",
@@ -15,7 +15,8 @@
     "web3",
     "context",
     "frontend",
-    "dapp"
+    "dapp",
+    "conflux-portal"
   ],
   "author": "raisezhang <raisezhang@hotmail.com>",
   "repository": {
