--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -3,7 +3,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "version": "6.2.5",
+  "version": "6.2.6",
   "description": "A simple, maximally extensible, dependency minimized framework for building modern Ethereum dApps",
   "keywords": [
     "react",
@@ -36,13 +36,12 @@
     "lint": "tsdx lint src test"
   },
   "dependencies": {
-    "@confluxproject/keccak256": "^5.0.35",
-    "@confluxproject/address": "^5.0.35",
+    "@confluxproject/keccak256": "^5.0.36",
+    "@confluxproject/address": "^5.0.36",
     "@web3-react/abstract-connector": "^6.0.7",
     "@web3-react/types": "^6.0.7",
     "tiny-invariant": "^1.0.6",
-    "tiny-warning": "^1.0.3",
-    "conflux-address-js": "^1.0.4"
+    "tiny-warning": "^1.0.3"
   },
   "peerDependencies": {
     "react": ">=16.8"
