--- a/packages/injected-connector/package.json
+++ b/packages/injected-connector/package.json
@@ -37,7 +37,8 @@
   "dependencies": {
     "@web3-react/abstract-connector": "^6.0.7",
     "@web3-react/types": "^6.0.7",
-    "tiny-warning": "^1.0.3"
+    "tiny-warning": "^1.0.3",
+    "tsdx": "^0.11.0"
   },
   "license": "GPL-3.0-or-later"
 }
