--- a/packages/injected-connector/package.json
+++ b/packages/injected-connector/package.json
@@ -3,7 +3,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "version": "6.3.4",
+  "version": "6.3.5",
   "description": "A simple, maximally extensible, dependency minimized framework for building modern Conflux dApps",
   "keywords": [
     "react",
@@ -37,7 +37,9 @@
   "dependencies": {
     "@web3-react/abstract-connector": "^6.0.7",
     "@web3-react/types": "^6.0.7",
-    "tiny-warning": "^1.0.3",
+    "tiny-warning": "^1.0.3"
+  },
+  "devDependencies": {
     "tsdx": "^0.11.0"
   },
   "license": "GPL-3.0-or-later"
