--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -3,7 +3,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "version": "6.2.9",
+  "version": "6.3.0",
   "description": "A simple, maximally extensible, dependency minimized framework for building modern Ethereum dApps",
   "keywords": [
     "react",
@@ -45,6 +45,9 @@
   },
   "peerDependencies": {
     "react": ">=16.8"
+  },
+  "devDependencies": {
+    "tsdx": "^0.11.0"
   },
   "license": "GPL-3.0-or-later"
 }
